# Minecraft-Clone-By-Ai

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists_new.txt  DEVELOPMENT.md  FINAL_CLEANUP_REPORT.md  INPUT_FIXES.md  LICENSE  PHASE1_COMPLETE.md  PHASE2.md  PHASE3.md  README.md  ROADMAP.md  STATUS.md  TODO_Minecraft_Clone.md  build.bat  build_debug.bat  build_mingw.bat  clean.bat  imgui.ini  install_glfw.bat  install_glm.bat  run.bat  run_debug.bat  run_mingw.bat
include/: config.h
shaders/: basic.frag  block.frag  block.vert  highlight.frag  sky.frag  sky.vert
src/: main.cpp
src/input/: input.cpp  input.h  input_clean.h
src/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  shader.cpp  shader.h  simple_shader.cpp  simple_shader.h  sky_renderer.cpp  sky_renderer.h  texture.cpp  texture.h
src/ui/: game_state.cpp  game_state.h  imgui_ui.cpp  imgui_ui.h  main_menu.cpp  main_menu.h
src/utils/: math_utils.cpp  math_utils.h
src/world/: block.cpp  block.h  chunk.cpp  chunk.h  world.cpp  world.h  world_backup.cpp
